--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,13 +1,14 @@
 builds:
-  - binary: goobar
+  - id: goobar
+    binary: goobar
     main: ./cmd/goobar
     goarch:
-      - "386"
       - amd64
       - arm64
       - arm
-    goarm:
-      - "6"
-      - "7"
 archives:
-  - format: zip
+  - id: goobar
+    builds:
+      - goobar
+    format: zip
+    name_template: 'goobar_{{ .Version }}_{{- if eq .Os "darwin" }}macos{{- else }}{{ .Os }}{{ end }}_{{ .Arch }}'
